--- a/B12A01-landing-launchpad/style.css
+++ b/B12A01-landing-launchpad/style.css
@@ -9,7 +9,7 @@
         color: white;
     }
 .hero{
-        background-image: url("./assets/Hero-bg.png");
+        background-image: url("./Assets/Hero-bg.png");
         background-color: #2c2c2c;
         background-size: cover;
         background-position: center;
